--- a/index.html
+++ b/index.html
@@ -216,11 +216,59 @@
             <img src="img/sec4/bitfinex@2x.png.png" />
             <p>GREEN</p>
           </div>
+           <div class="card a">
+            <img src="img/sec4/bithumb@2x.png (1).png" />
+            <p>BITHUMB</p>
+          </div>
+          <div class="card a">
+            <img src="img/sec4/bitbank@2x.png.png" />
+            <p>BITBANK</p>
+          </div>
+          <div class="card a">
+            <img src="img/sec4/binance@2x.png.png" />
+            <p>BINANCE</p>
+          </div>
+          <div class="card a">
+            <img src="img/sec4/bitstamp@2x.png.png" />
+            <p>BITSTAMP</p>
+          </div>
+          <div class="card a">
+            <img src="img/sec4/coinbase@2x.png.png" />
+            <p>COINBASE</p>
+          </div>
+          <div class="card a">
+            <img src="img/sec4/bitfinex@2x.png.png" />
+            <p>GREEN</p>
+          </div>
           <div class="place"></div>
         </div>
         <div class="card-col2">
           <div class="place"></div>
           <div class="card b">
+            <img src="img/sec4/bitstamp@2x.png.png" />
+            <p>BITSTAMP</p>
+          </div>
+          <div class="card b">
+            <img src="img/sec4/bitbank@2x.png.png" />
+            <p>BITBANK</p>
+          </div>
+          <div class="card b">
+            <img src="img/sec4/bitfinex@2x.png.png" />
+            <p>GREEN</p>
+          </div>
+          <div class="card b">
+            <img src="img/sec4/bithumb@2x.png (1).png" />
+            <p>BITHUMB</p>
+          </div>
+          <div class="card b">
+            <img src="img/sec4/coinbase@2x.png.png" />
+            <p>COINBASE</p>
+          </div>
+          <div class="card b">
+            <img src="img/sec4/binance@2x.png.png" />
+            <p>BINANCE</p>
+          </div>
+           <div class="card b">
             <img src="img/sec4/bitstamp@2x.png.png" />
             <p>BITSTAMP</p>
           </div>
